syntax = "proto3";

option csharp_namespace = "System.Text.Json.Protobuf.Tests";

message MessageWithMaps {
  map<int32, string> map_int_to_string = 1;
  map<string, NestedMessageAsKey> map_string_to_complex_type = 2;
}

message NestedMessageAsKey {
  map<string, int32> map_string_to_int = 1;
}